wire into transform task